syntax = "proto3";

option java_package="aiservice";
option java_multiple_files=true;

service UserService {
  rpc GetReply (UserRequest) returns (UserResponse);
}

message UserRequest {
  string prompt = 1;
}

message UserResponse {
  string reply = 1;
}
